--- a/Project/assets/styles.css
+++ b/Project/assets/styles.css
@@ -151,7 +151,15 @@ body.main-view
 
 .brand{ display:flex; align-items:center; gap:8px; }
 .brand-mark{ font-size: 1.1rem; }
-.brand-name{ font-weight: 700; letter-spacing:.3px; color:#d36b00;}
+.brand-name{
+  position: fixed; left: 45%;
+  font-weight: 700;
+  font-size: 30px;
+  font:x-large  ;
+  letter-spacing:3px;
+  font-style: italic;
+  color:#f5800b;
+}
 
 .nav{ display:flex; gap:12px; }
 .nav-link{
