--- a/Project/assets/styles.css
+++ b/Project/assets/styles.css
@@ -1,12 +1,11 @@
 
 * 
 {
- box-sizing: border-box;
-}
+ box-sizing: border-box;}
+
 html, body 
 {
-  height: 100%;
-}
+  height: 100%;}
 
 body 
 {
@@ -17,8 +16,37 @@ body
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 24px;
-}
+  padding: 24px;}
+
+/* Results Page table output results thingy*/
+table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 6px;}
+
+th, td {
+  padding: 12px 10px;
+  border-bottom: 1px solid #eee;
+text-align: left;}
+
+th{
+  background: #fff3ea;
+  color: #c25f00;
+  text-align: left;}
+
+tr:hover {
+  background: #fff8f3; }
+
+.backlink {
+  display: inline-block;
+  margin-top: 16px;
+  text-decoration: none;
+  color: #00a896;
+  font-weight: 600;}
+
+.backlink:hover {
+  text-decoration: underline; 
+  color: #028090; }
 
 .card 
 {
